New Changes in package.json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gitgpt",
   "displayName": "GitGPT",
-  "description": "\"GitGPT is a powerful and intuitive VS Code extension designed to streamline your code review process. Leveraging the advanced capabilities of OpenAI's GPT model, GitGPT automatically generates insightful and context-aware comments for your commits based on the diff. With a simple click on the icon next to the comment area, GitGPT provides you with a relevant comment, saving you time and enhancing your productivity. Whether you're a solo developer or part of a collaborative team, GitGPT is an essential tool to make your coding and review process more efficient and effective.\"",
-  "version": "0.0.1",
-  "publisher": "Iman Reihanian",
+  "description": "GitGPT is a powerful and intuitive VS Code extension designed to streamline your code review process. Leveraging the advanced capabilities of OpenAI's GPT model, GitGPT automatically generates insightful and context-aware comments for your commits based on the diff.",
+  "version": "0.0.2",
+  "publisher": "ImanReihanian",
   "repository": {
     "type": "git",
     "url": "https://github.com/0x11c11e/GitGPT.git"
@@ -25,7 +25,9 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand:gitgpt"
+  ],
   "main": "./extension.js",
   "contributes": {
     "commands": [
